Noteworthy changes to the RISC OS GCCSDK releases made.

For specific UnixLib changes, see !GCC.docs.UnixLib.Changes too.

GCCSDK GCC 4.1.1 Release 3 (released xxx)
==========================

Major changes:
  - Binutils 2.20

GCCSDK GCC 4.1.1 Release 2 (released 27 December 2009)
==========================

Major changes:
  - Test release where the shared library code generation is enabled
    and which also contains !SharedLibs.
  - Added 'asasm', the 'simple assembler' supporting the Acorn ARM assembler
    and ObjAsm syntax with AOF or ELF output. This was originally written by
    Niklas Röjemo and formally known as 'as' and also part of the !AS
    application.
    This was also the ARM assembler backend in the pre-GCCSDK 4 kits and now
    part of GCCSDK 4 to support legacy Acorn ARM assembler and ObjAsm files
    and this after many compatibility fixes.
    More information can be found in !GCC.docs.asasm.
  - Possibility to create RISC OS modules without having to use
    SharedCLibrary.
  - Limited profile support (gcc option -pg).

Bug fixes:
  - Shareble library fixes (SOModule and code generation).
  - Several C++ exception fixes.
  - UnixLib:
    - Better leafname determination of program name.  Fixes Bug #169
      <URL:http://www.riscos.info/bugzilla3/show_bug.cgi?id=169> (reported by
      John Kortink).
    - Better canonicalisation behaviour of program name when Run$Path was
      used reverting the work arounds in previous Release 1b and 1a
      (Alias$gcc/Alias$g++).
    - Fixed memory leak.
    - Improved symbolic link support.  Fixes item 1 of Bug #162
      <URL:http://www.riscos.info/bugzilla3/show_bug.cgi?id=162> (reported by
      Duncan Moore).
    - Fix for recursive signal calling.
    - Constify some of the function parameters in kernel.h.  Likewise for
      SCL kernel.h header.
  - Module generation:
    - Image__RO_Base variable is now located in .rodata section instead of
      .data.