@@ -190,6 +190,69 @@ to enforce chunk stack checking for those module object files containing code wh
    *gcc -static -o mybinary file.o
 </pre>
 
+<h5>1.3.4. Profiling (experimental)</h5>
+
+<p>Profiling is the art of determining where the CPU spends most of its time when running your program. To enable profiling, the option -pg is passed to GCC during compiling and linking. An example, <a href="../Examples/collatz.c">collatz.c</a> should help to make this clearer:
+
+<pre>
+   *gcc -pg -o collatz collatz.c
+</pre>
+
+<p>Now, when ever the program is run, it will be profiled and upon exiting will write a file named gmon/out to the currently selected directory. This is a machine readable file and must be processed by a program called gprof before the results can be made sense of. The simplist way to do this is to pass the executable and the gmon/out file to gprof on the command line:
+
+<pre>
+   *gprof collatz gmon/out >gprof-output
+</pre>
+
+Note that the output of the command is written to a file, as the output from gprof contains formfeed characters (ASCII char 12) which cause unwanted effects when printed directly to the screen.
+For an explanation of the gprof results, please see the <a href="gprof/index.html">gprof manual</a>.
+
+<p>Optimising code (that is, using the -O switch when compiling) can effect how the code is profiled, for example, functions can apparently disappear and fail to be listed in the profiling results. This is most likely due to GCC inlining the function so that it does not exist as a function is its own right but becomes part of another function. One way around this is to tell GCC not to inline such functions by using:
+
+<pre>
+   __attribute__ ((noinline))
+</pre>
+
+when declaring them.
+
+<p>It's possible to control manually what is and isn't profiled by using the moncontrol function, which is declared in the system header file &lt;sys/gmon.h&gt;. The value passed as the single argument to moncontrol should be 0 to stop profiling and 1 to start profiling, for example, if you have a function a() which calls b(), but you don't want b() to be profiled, then it may look like this:
+
+<pre>
+   void b(void)
+   {
+     ...
+   }
+
+   void a(void)
+   {
+     ...
+     moncontrol(0);
+     b();
+     moncontrol(1);
+     ...
+   }
+</pre>
+
+<h5>1.3.4.1. Profiling - System requirements</h5>
+
+<p>Profiling support requires at least an ARM 600 and RISC&nbsp;OS 4. As only HAL and OS calls are used, it should work on any version of RISC OS with a HAL. For a 26 bit OS, the HAL26 module written by Theo Markettos is required.
+
+<p>Due to the low level nature of the profiling support, this feature is currently deemed experimental, as it is difficult to gauge how it will interact with other programs. It's therefore advisable to save any important work before using the profiler. You should not attempt to profile two programs at the same time, as this will almost certainly fail (a future version may infact take steps to prevent it).
+
+<h5>1.3.4.2. Profiling - Shared libraries</h5>
+
+<p>Support for profiling shared libraries is not yet implemented (although we hope to add this in the future), however, this does not prevent the dynamically linked program from being profiled. You should remember though that any functions within shared libraries will not count towards the profile.
+
+<h5>1.3.4.3. Profiling - How it works</h5>
+
+<p>Profiling in RISC OS GCCSDK involves two techniques; counting functions calls, recording the relationships between each of them and recording how much time is spent in each.
+
+Compiling with -pg has the effect of inserting a function call to mcount at the beginning of every function. mcount is provided by UnixLib (which therefore must be the runtime library), and is responsible for incrementing a count for the current function and recording its caller.
+
+<p>When linking, the use of -pg causes GCC to link against gcrt1-riscos.o instead of crt1-riscos.o. This tells UnixLib that profiling has been enabled and that it should start the profiling hardware timer. The hardware timer is set to generate an interrupt one hundred times every second. Upon each interrupt, the program being profiled is stopped and a small (interrupt) routine is called with the address at which the program stopped passed to it. The interrupt routine increments a counter for this particular address and then returns control back to the point of the interruption and the program continues as if nothing happened.
+This is called statistical sampling.
+The counters for each sample point are 16 bits wide which means that each can count to 65535 before overflow occurs. If an overflow of any of the samples is detected, profiling is automatically disabled, however, the result file is still written.
+
 <h4>1.4. Switches</h4>
 
 <p>This is a list of the simpler, standard switches for GCC. Full details can be obtained from the <a href="gcc/gcc/index.html">GNU C/C++ manual</a>. Please see below for the ARM specific switches since these have altered from the original GCC version.
